// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card snapshot - danger 1`] = `
<div
  className="makeStyles-card-1 makeStyles-danger-9"
>
  <div>
     Card
  </div>
</div>
`;

exports[`Card snapshot - info 1`] = `
<div
  className="makeStyles-card-1 makeStyles-info-6"
>
  <div>
     Card
  </div>
</div>
`;

exports[`Card snapshot - primary 1`] = `
<div
  className="makeStyles-card-1 makeStyles-primary-5"
>
  <div>
     Card
  </div>
</div>
`;

exports[`Card snapshot - rose 1`] = `
<div
  className="makeStyles-card-1 makeStyles-rose-10"
>
  <div>
     Card
  </div>
</div>
`;

exports[`Card snapshot - success 1`] = `
<div
  className="makeStyles-card-1 makeStyles-success-7"
>
  <div>
     Card
  </div>
</div>
`;

exports[`Card snapshot - warning 1`] = `
<div
  className="makeStyles-card-1 makeStyles-warning-8"
>
  <div>
     Card
  </div>
</div>
`;
